# on-moving-things

./: .env.example  .gitignore  PROJECT_GUIDE.md  README.md  pyproject.toml
.github/workflows/: eval-gate.yml
data/mock/: carriers.json  drivers.json  inspections.json
data/regulations/: csa_scoring.md  fmcsa_driver_qualification.md  fmcsa_hos.md  operating_authority.md
demo/: cli.py  project_demo.sh
evals/: test_eval_harness.py  test_parking.py  test_unit.py
parkcheck/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.sh
parkcheck/app/: main.py  models.py  providers.py  rule_engine.py
parkcheck/app/static/: index.html
parkcheck/tests/: test_rule_engine.py
parking/: __main__.py  app.py  models.py  rule_engine.py  sign_parser.py
parking/static/: index.html
src/agents/: __init__.py  base.py  carrier_vetting.py  compliance_oracle.py  csa_scoring.py  driver_qual.py
src/api/: ingest_jobs.py  main.py
src/compliance/: __init__.py  dqf.py
src/eval/: __init__.py  harness.py  test_cases.py
src/graph/: __init__.py  orchestrator.py
src/knowledge/: __init__.py  fmcsa_api.py  graph.py  ingester.py  regulations.py  vectorstore.py
src/models/: __init__.py  domain.py
src/observability/: __init__.py  tracer.py
