[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haulcopilot-ai"
version = "0.1.0"
description = "Multi-agent transportation compliance intelligence system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.3.0",
    "typer>=0.12.5,<0.13.0",
    "networkx>=3.4.0",
    "docling>=2.0.0; python_version>='3.10'",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-rich>=0.1.1",
]
lite = [
    "pypdf>=5.0.0",
]

[project.scripts]
haulcopilot  = "demo.cli:app"
park-sign    = "parking.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "parking"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
markers = [
    "integration: live integration tests that call external APIs",
]
