[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "can-i-park-here"
version     = "1.0.0"
description = "AI-powered parking sign reader — photo or OCR text → Park / Do Not Park"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.49.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",   # for FastAPI TestClient
]

[project.scripts]
parkcheck = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
